--- a/public/AtempatKulaan.html
+++ b/public/AtempatKulaan.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <!---bootstrap terbaru-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styleProjekIni.css">
+    <link rel="stylesheet" href="css/styleProjekIni.css">
   </head>
 
   <body>
@@ -148,11 +148,11 @@
       
     
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   <script src="../javaScript/scriptProjekIni.js"></script>
+   <script src="javaScript/scriptProjekIni.js"></script>
    <script type="module">
         import { ref, set, child, get, update, remove, onValue, orderByChild, limitToLast } 
           from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-        import { database } from "../javaScript/koneksi.js";
+        import { database } from "javaScript/koneksi.js";
   
         const db = database;
         const dbRef = ref(db);
