--- a/public/Astock.html
+++ b/public/Astock.html
@@ -159,7 +159,7 @@
     
         import { ref, set, child, get, push, update, remove, onValue, orderByChild, limitToLast } 
           from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";   
-         import { database } from "javaScript/koneksi.js";  
+         import { database } from "./javaScript/koneksi.js";  
   
      const db = database;
      const dbRef = ref(db);
