--- a/public/AjenisBarang.html
+++ b/public/AjenisBarang.html
@@ -141,7 +141,7 @@
    <script type="module">
 
      import { ref, onValue, child, set, get, update, remove } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-     import { database } from "javaScript/koneksi.js";
+     import { database } from "./javaScript/koneksi.js";
      
         const db = database;
         const dbRef = ref(db);
