--- a/public/AhargaProduk.html
+++ b/public/AhargaProduk.html
@@ -163,7 +163,7 @@
    <script type="module">
 
      import { ref, onValue, child, set, get, update, remove, push, } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-     import { database } from "./javaScript/koneksi.js";
+     import { database } from "/javaScript/koneksi.js";
      
         const db = database;
         const dbRef = ref(db);
