--- a/public/Asatuan.html
+++ b/public/Asatuan.html
@@ -147,7 +147,7 @@
    <script type="module">
         import { ref, set, child, get, update, remove, onValue, orderByChild, limitToLast } 
           from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-        import { database } from "./javaScript/koneksi.js";
+        import { database } from "/javaScript/koneksi.js";
   
         const db = database;
         const dbRef = ref(db);
