--- a/public/AstockChek.html
+++ b/public/AstockChek.html
@@ -19,7 +19,7 @@
     
         import { ref, set, child, get, push, update, remove, onValue, orderByChild, limitToLast } 
           from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";   
-         import { database } from "./javaScript/koneksi.js";  
+         import { database } from "/javaScript/koneksi.js";  
   
     
     // Inisialisasi Firebase (config tidak perlu dituliskan sesuai permintaan)
